syntax = "proto3";

package event.events.v1;

option csharp_namespace = "EventService.Presentation.Grpc";

service SeatValidationGrpcService {
  rpc SeatExists(SeatExistsRequest) returns (SeatExistsResponse);
  rpc IsSeatAvailable(IsSeatAvailableRequest) returns (SeatAvailableResponse);
  rpc GetSeatStatus(GetSeatStatusRequest) returns (SeatStatusResponse);

  rpc BookSeats(BookSeatsRequest) returns (BookSeatsResponse);     
  rpc ReturnSeats(ReturnSeatsRequest) returns (ReturnSeatsResponse);
}

message SeatExistsRequest {
  int64 hall_scheme_id = 1;
  int32 row = 2;
  int32 seat_number = 3;
}

message IsSeatAvailableRequest {
  int64 hall_scheme_id = 1;
  int32 row = 2;
  int32 seat_number = 3;
}

message GetSeatStatusRequest {
  int64 hall_scheme_id = 1;
  int32 row = 2;
  int32 seat_number = 3;
}

message SeatExistsResponse {
  bool exists = 1;
}

message SeatAvailableResponse {
  bool available = 1;
}

message SeatStatusResponse {
  string status = 1;
}

message SeatInfo {
  int32 row = 1;
  int32 seat_number = 2;
}

message BookSeatsRequest {
  int64 hall_scheme_id = 1;
  repeated SeatInfo seats = 2;
}

message BookSeatsResponse {
  bool success = 1;
}

message ReturnSeatsRequest {
  int64 hall_scheme_id = 1;
  repeated SeatInfo seats = 2;
}

message ReturnSeatsResponse {
  bool success = 1;
}